# labs_second_course

./: .gitignore  CMakeLists.txt  README.md
lab1/: Massive_Double.cpp
lab1.1/: CMakeLists.txt  README.md  my
lab1.1/include/: class_Massive.h
lab1.1/output/: 1
lab1.1/output/1.dSYM/Contents/Resources/DWARF/: 1
lab1.1/src/: class_Massive.cpp  main.cpp
lab1.2/: CMakeLists.txt  README.md
lab1.2/include/: class_String.h
lab1.2/src/: class_String.cpp  main.cpp
lab1/output/: 1
lab1/output/1.dSYM/Contents/Resources/DWARF/: 1
lab1/output/1.dSYM/Contents/Resources/Relocations/aarch64/: 1.yml
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Dealer.h  Employer.h  Person.h  Tourist.h
lab2/src/: Dealer.cpp  Employer.cpp  Person.cpp  Tourist.cpp
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/.cache/clangd/index/: Dealer.cpp.E11FE0C973CA7549.idx  Dealer.h.C4FAD1B44AB38FA9.idx  Deque.h.6BB8F6E72A7FE4F7.idx  Employer.cpp.3DBBB8BAFFD8FA98.idx  Employer.h.591CC5760AE9F5CE.idx  Person.cpp.B6990A26AE4FF0F4.idx  Person.h.0AB537D4888AEEED.idx  Tourist.cpp.B0A8A2DCC3B33EF4.idx  Tourist.h.D6F034BBCE395931.idx  main.cpp.1B81CEE00A713B99.idx
lab3/include/: Dealer.h  Deque.h  Deque.hpp  Deque.tpp  Employer.h  Person.h  Tourist.h
lab3/src/: Dealer.cpp  Deque.cpp  Employer.cpp  Person.cpp  Tourist.cpp
